Add Wordpress and Joompa/Jopensim or other CMS capability to Apache web server without stepping on Dreamgrid or the updater breaking the CMS

--- a/OutworldzFiles/Apache/htdocs/DreamGrid/error404.htm
+++ b/OutworldzFiles/Apache/htdocs/DreamGrid/error404.htm
@@ -6,7 +6,7 @@ function goBack() {
 }
 </script>
 
-<link rel="shortcut icon" href="/favicon.ico"
+<link rel="shortcut icon" href="favicon.ico"
 </head>
 <body>
 <h1>Error 404 - File not found</h1>
@@ -14,7 +14,7 @@ function goBack() {
 <button onclick="goBack()">Go Back</button>
 </p>
 <p>
-<img src="/error404.jpg">
-</p?	
+<img src="error404.jpg">
+</p>	
 </body>
 </html>
