--- a/OutworldzFiles/Opensim/bin/WifiPages-Black/map.html
+++ b/OutworldzFiles/Opensim/bin/WifiPages-Black/map.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title><!-- #get var=GridName --></title>
-
+    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico">
     <style type="text/css">
         html, body {
             height: 100%;
