--- a/OutworldzFiles/Apache/htdocs/WordPress/default.htm
+++ b/OutworldzFiles/Apache/htdocs/WordPress/default.htm
@@ -7,7 +7,7 @@
 	<li>Extract it to Outworldzfiles\Apache\htdocs\Wordpress folder.</li>
 	<li>Go to Setup-&gt;Settings-&gt;Apache Settings and set the type to &quot;Wordpress&quot;.
 	</li>
-	<li>Click the Apache Icon at top right of the main panel and select Restart</li>
+	<li>Click the Apache Icon at top right of the main panel and select Restart.</li>
 	<li>Navigate to &quot;<a href="http://localhost">http://localhost</a>&quot; and 
 	follow the instructions to set up&nbsp; Wordpress.</li>
 </ol>
