Correct Copyright and add Mitsi Links

--- a/OutworldzFiles/Opensim/WifiPages-White/footer.html
+++ b/OutworldzFiles/Opensim/WifiPages-White/footer.html
@@ -9,5 +9,6 @@
 	      <p><!-- #get var=Version --> <!-- #get var=RuntimeInfo --></p>
 	      <p>Web design &copy; Crista Lopes and Marck. 
                  Distributed under <a href="http://creativecommons.org/licenses/by/3.0/">Creative&nbsp;Commons</a>.</p>
-		  <p>Dreamgrid is Copyright 2001 by <a href="https://www.outworldz.com">Outworldz, LLC.</a>
+	      <p>Dreamgrid is AGPL 3.0 Copyright 2017 by <a href="https://www.outworldz.com">Outworldz, LLC.</a></p>
+	      <p>Dreamgrid is designed by <a href="https://www.mitsi.com">software experts at Micro Technology Services, Inc.</a></p>
 	    </div>
