--- a/OutworldzFiles/Opensim/WifiPages-Black/footer.html
+++ b/OutworldzFiles/Opensim/WifiPages-Black/footer.html
@@ -1,6 +1,7 @@
 	    <div id="footer-pad">
 	      <div class="line"></div>
 	      <p>LoginURI <span class="textlogo"><!-- #get var=LoginURL --></span></p>
+	      
           <!-- The following is not enabled by default because this information -->
           <!-- could be used to target attacks to known weaknesses.             -->
           <!-- If you want to display this information anyway, then delete the  -->
@@ -8,5 +9,6 @@
 	      <p><!-- #get var=Version --> <!-- #get var=RuntimeInfo --></p>
 	      <p>Web design &copy; Crista Lopes and Marck. 
                  Distributed under <a href="http://creativecommons.org/licenses/by/3.0/">Creative&nbsp;Commons</a>.</p>
-		  <p>Dreamgrid is Copyright 2001 by <a href="https://www.outworldz.com">Outworldz, LLC.</a>
+	      <p>Dreamgrid is AGPL 3.0 Copyright 2017 by <a href="https://www.outworldz.com">Outworldz, LLC.</a></p>
+	      <p>Dreamgrid is designed by <a href="https://www.mitsi.com">software experts at Micro Technology Services, Inc.</a></p>
 	    </div>
