Adds streaming video help and web page

--- a/OutworldzFiles/Apache/htdocs/Audio/default.htm
+++ b/OutworldzFiles/Apache/htdocs/Audio/default.htm
@@ -11,14 +11,14 @@
 <strong>
 
 <!--webbot bot="Navigation" S-Type="banner" S-Rendering="graphics" S-Orientation
-B-Include-Home B-Include-Up U-Page S-Target startspan -->Streaming MP3 Sound files for Opensim<!--webbot bot="Navigation" i-checksum="37263" endspan --></strong>
+B-Include-Home B-Include-Up U-Page S-Target startspan --><!--webbot bot="Navigation" i-checksum="0" endspan --></strong>
 <p>&nbsp;MP3&nbsp; files can be used to make region and parcel-wide background 
 sounds. The files you see here&nbsp; are located in Outworldzfiles\Apache\htdocs\Audio.&nbsp; 
 You can add your own audio files there.&nbsp; This selection of background 
 sounds is CC-0 so can be used anywhere with no license restrictions.&nbsp;
 </p>
 <p>You can play one sound at a time per parcel using your DreamGrid Apache web 
-server. Apache must be enabled and running for this to work.&nbsp; You can 
+server. The sound can be looped.&nbsp; Apache must be enabled and running for this to work.&nbsp; You can 
 divide up your land into small parcels and play different audio sounds in each 
 parcel</p>
 <ul>
@@ -47,9 +47,10 @@ click the link, and copy and paste the path.<br>
 4. You need a unique texture not used before. This PNG file can be used. Right 
 click and save it, and upload it to your viewer.<br>
 <br>
-<img alt="Audio PNG" src="Audio.png" width="256" height="256"><br>
+<img alt="Audio P NG" src="images/Audio.png" width="256" height="256"><br>
 <br>
 <br>
+5.
 Drag and drop the Audio.png file into the X window so it appears like this.&nbsp; 
 You need to usee the web URl for your grid, typically
 <a href="http://something.outworldz.net:80/Audio">
@@ -57,10 +58,13 @@ http://something.outworldz.net:80/Audio</a>, where somethingis your chosen URL.
 You can get this link in the Help menu in the fist selection. Then change the 
 port to whatever port you use for Apache, in Settings-&gt;Apache.<br>
 <br>
+Also click &quot;Loop&quot;. If you want the file to play again and again.<br>
+<br>
 <img alt="Autio File saved in Viewer" src="images/img6.jpg"><br>
 <br>
-Make a prim or find a hidden face on a prim. Click &quot;Select Face&quot;, and choose one 
+Make a prim. Click &quot;Select Face&quot;, and choose one 
 face only!&nbsp; Drag and drop the image onto one face only.<br>
+<br>
 <img alt="Audio on Prim" src="images/img8.jpg"><br>
 <br>
 Now click the movie camera at the top right of your viewer:<br>
