--- a/OutworldzFiles/Apache/htdocs/Audio/default.htm
+++ b/OutworldzFiles/Apache/htdocs/Audio/default.htm
@@ -4,6 +4,11 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Streaming MP3 Sound files for Opensim</title>
+<style type="text/css">
+.style1 {
+	text-align: left;
+}
+</style>
 </head>
 
 <body>
@@ -11,7 +16,7 @@
 <strong>
 
 <!--webbot bot="Navigation" S-Type="banner" S-Rendering="graphics" S-Orientation
-B-Include-Home B-Include-Up U-Page S-Target startspan --><!--webbot bot="Navigation" i-checksum="0" endspan --></strong>
+B-Include-Home B-Include-Up U-Page S-Target --></strong>
 <p>&nbsp;MP3&nbsp; files can be used to make region and parcel-wide background 
 sounds. The files you see here&nbsp; are located in Outworldzfiles\Apache\htdocs\Audio.&nbsp; 
 You can add your own audio files there.&nbsp; This selection of background 
@@ -22,12 +27,37 @@ server. The sound can be looped.&nbsp; Apache must be enabled and running for th
 divide up your land into small parcels and play different audio sounds in each 
 parcel</p>
 <ul>
-	<li>Caves</li>
-	<li>Oceans</li>
-	<li>Forests</li>
-	<li>Snow</li>
-	<li>Rivers and Streams</li>
-	<li>Waterfalls</li>
+	<li>Caves<ul>
+		<li class="style1"><a href="running_water.mp3">running_water(cave).mp3</a></li>
+		<li><a href="wind_and_water_mix.mp3">wind_and_water_mix.mp3</a></li>
+	</ul>
+	</li>
+	<li>Oceans
+	<ul>
+		<li>&nbsp;<a href="ocean_waves.mp3">ocean_waves.mp3</a></li>
+	</ul>
+	</li>
+	<li>Forests<ul>
+		<li>&nbsp;<a href="Forest.mp3">Forest.mp3</a></li>
+	</ul>
+	</li>
+	<li>Snow<ul>
+		<li><a href="SnowAmbience.mp3">SnowAmbience.mp3</a></li>
+	</ul>
+	</li>
+	<li>Rivers and Streams&nbsp;
+	<ul>
+		<li><a href="Creek.mp3">Creek.mp3</a></li>
+		<li><a href="Fast_Dripping_Water.mp3">Fast_Dripping_Water.mp3</a></li>
+		<li>&nbsp; <a href="river_under_bridge.mp3">river_under_bridge.mp3 </a>
+		</li>
+		<li><a href="StreamLoop.mp3">StreamLoop.mp3</a></li>
+	</ul>
+	</li>
+	<li>Waterfalls<ul>
+		<li><a href="waterfall1.mp3">waterfall1.mp3</a></li>
+	</ul>
+	</li>
 </ul>
 <p>How does it work?&nbsp; It plays&nbsp; can be played sim-wide on a special 
 image.</p>
