--- a/OutworldzFiles/Apache/htdocs/Video/default.htm
+++ b/OutworldzFiles/Apache/htdocs/Video/default.htm
@@ -21,9 +21,10 @@ server. Apache must be enabled and running for this to work.&nbsp; You can
 divide up your land into small parcels and play different audio sounds in each 
 parcelHelp </p>
 <ul>
-	<li>Help Screens</li>
+	<li>Help Screens and Tutorial</li>
 	<li>Movies</li>
-	<li>About Your Region</li>
+	<li>Halloween surprises</li>
+	<li>About Your Region Video Previews</li>
 </ul>
 <p>&nbsp;How does it work?&nbsp; It plays&nbsp; can be playedon a special 
 image.</p>
@@ -69,6 +70,7 @@ Now click the movie camera at the top right of your viewer:<br>
 <br>
 <img alt="" src="images/img7.jpg"><br>
 <br>
+And this is TinkersFirstDance.mov playing on a prim<br>
 <br>
 <img alt="Tinkers First Dance" src="images/TinkersFirstDance.gif" width="694" height="484"><br>
 <br>
