Prettify Perl, Joomla and other HTML examples

--- a/OutworldzFiles/Apache/htdocs/Audio/default.htm
+++ b/OutworldzFiles/Apache/htdocs/Audio/default.htm
@@ -12,18 +12,14 @@
 </head>
 
 <body>
-
-<strong>
-
-<!--webbot bot="Navigation" S-Type="banner" S-Rendering="graphics" S-Orientation
-B-Include-Home B-Include-Up U-Page S-Target startspan --><!--webbot bot="Navigation" i-checksum="0" endspan --></strong>
-<p>&nbsp;MP3&nbsp; files can be used to make region and parcel-wide background 
-sounds. The files you see here&nbsp; are located in Outworldzfiles\Apache\htdocs\Audio.&nbsp; 
-You can add your own audio files there.&nbsp; This selection of background 
-sounds is CC-0 so can be used anywhere with no license restrictions.&nbsp;
+<!--#include virtual="/menu.html" -->
+<p>MP3 files can be used to make region and parcel-wide background 
+sounds. The files you see here are located in Outworldzfiles\Apache\htdocs\Audio. 
+You can add your own audio files there. This selection of background 
+sounds is CC-0 so can be used anywhere with no license restrictions.
 </p>
 <p>You can play one sound at a time per parcel using your DreamGrid Apache web 
-server. The sound can be looped.&nbsp; Apache must be enabled and running for this to work.&nbsp; You can 
+server. The sound can be looped. Apache must be enabled and running for this to work. You can 
 divide up your land into small parcels and play different audio sounds in each 
 parcel</p>
 <ul>
@@ -34,22 +30,22 @@ parcel</p>
 	</li>
 	<li>Oceans
 	<ul>
-		<li>&nbsp;<a href="ocean_waves.mp3">ocean_waves.mp3</a></li>
+		<li><a href="ocean_waves.mp3">ocean_waves.mp3</a></li>
 	</ul>
 	</li>
 	<li>Forests<ul>
-		<li>&nbsp;<a href="Forest.mp3">Forest.mp3</a></li>
+		<li><a href="Forest.mp3">Forest.mp3</a></li>
 	</ul>
 	</li>
 	<li>Snow<ul>
 		<li><a href="SnowAmbience.mp3">SnowAmbience.mp3</a></li>
 	</ul>
 	</li>
-	<li>Rivers and Streams&nbsp;
+	<li>Rivers and Streams
 	<ul>
 		<li><a href="Creek.mp3">Creek.mp3</a></li>
 		<li><a href="Fast_Dripping_Water.mp3">Fast_Dripping_Water.mp3</a></li>
-		<li>&nbsp; <a href="river_under_bridge.mp3">river_under_bridge.mp3 </a>
+		<li> <a href="river_under_bridge.mp3">river_under_bridge.mp3 </a>
 		</li>
 		<li><a href="StreamLoop.mp3">StreamLoop.mp3</a></li>
 	</ul>
@@ -59,17 +55,17 @@ parcel</p>
 	</ul>
 	</li>
 </ul>
-<p>How does it work?&nbsp; It plays&nbsp; can be played sim-wide on a special 
+<p>How does it work? It plays can be played sim-wide on a special 
 image.</p>
 <p>These are the steps to play MP3 files continually on your region or parcel.</p>
-<p>1.&nbsp; In your viewer, go to the About Land Menu:</p>
+<p>1. In your viewer, go to the About Land Menu:</p>
 <img alt="About Land Menu" src="images/img2.jpg"><br>
 <br>
 2. Change to the Media Tab:<br>
 <br>
 <img alt="Media Tab" src="images/img4.jpg"><br>
 <br>
-3. Click the Set button and enter the URL of the desired sound.&nbsp; You can 
+3. Click the Set button and enter the URL of the desired sound. You can 
 click the link, and copy and paste the path.<br>
 <br>
 <img alt="AUdio File Path" src="images/img5.jpg"><br>
@@ -81,7 +77,7 @@ click and save it, and upload it to your viewer.<br>
 <br>
 <br>
 5.
-Drag and drop the Audio.png file into the X window so it appears like this.&nbsp; 
+Drag and drop the Audio.png file into the X window so it appears like this. 
 You need to usee the web URl for your grid, typically
 <a href="http://something.outworldz.net:80/Audio">
 http://something.outworldz.net:80/Audio</a>, where somethingis your chosen URL. 
@@ -93,7 +89,7 @@ Also click &quot;Loop&quot;. If you want the file to play again and again.<br>
 <img alt="Autio File saved in Viewer" src="images/img6.jpg"><br>
 <br>
 Make a prim. Click &quot;Select Face&quot;, and choose one 
-face only!&nbsp; Drag and drop the image onto one face only.<br>
+face only! Drag and drop the image onto one face only.<br>
 <br>
 <img alt="Audio on Prim" src="images/img8.jpg"><br>
 <br>
