--- a/OutworldzFiles/Apache/htdocs/Video/default.htm
+++ b/OutworldzFiles/Apache/htdocs/Video/default.htm
@@ -7,11 +7,7 @@
 </head>
 
 <body>
-
-<strong>
-
-<!--webbot bot="Navigation" S-Type="banner" S-Rendering="graphics" S-Orientation
-B-Include-Home B-Include-Up U-Page S-Target startspan --><!--webbot bot="Navigation" i-checksum="0" endspan --></strong>
+<!--#include virtual="/menu.html" -->
 <p>MOV files can be used to make region and parcel-wide video players. The 
 Video you see here is located in <b></b>Outworldzfiles\Apache\htdocs\Video</b>.
 You can add your own Video files there. A sample is <a href="TinkersFirstDance.mov">TinkersFirstDance.mov</a>.
