--- a/OutworldzFiles/Apache/htdocs/WordPress/default.htm
+++ b/OutworldzFiles/Apache/htdocs/WordPress/default.htm
@@ -1,7 +1,8 @@
 ﻿<html>
 <head></head>
 <body>
-<p>&nbsp; To install Wordpress, follow these steps:</p>
+<!--#include virtual="/menu.html" -->
+<p>Follow these steps to install Wordpress, :</p>
 <ol>
 	<li>Download the zip file from <a href="https://wordpress.org/download/">https://wordpress.org/download/</a>.</li>
 	<li>Extract it to Outworldzfiles\Apache\htdocs\Wordpress folder.</li>
