--- a/OutworldzFiles/Apache/htdocs/JOpensim/default.htm
+++ b/OutworldzFiles/Apache/htdocs/JOpensim/default.htm
@@ -1,7 +1,8 @@
 ﻿<html>
 <head></head>
 <body>
-<p>&nbsp; To install Joomla and JOpensim, follow these steps:</p>
+<!--#include virtual="/menu.html" -->
+<p>Follow these steps to install Joomla and JOpensim:</p>
 <ol>
 	<li>Download the zip file from <a href="https://www.joomla.org/">https://www.joomla.org/</a>.</li>
 	<li>Extract it to Outworldzfiles\Apache\htdocs\JOpensim folder.</li>
@@ -9,8 +10,8 @@
 	</li>
 	<li>Click the Apache Icon at top right of the main panel and select Restart.</li>
 	<li>Navigate to &quot;<a href="http://localhost">http://localhost</a>&quot; and 
-	follow the instructions to set up&nbsp; Joomla.</li>
-	<li>Go to https://www.jopensim.com/jopensim/downloads1.html and follow the instructions to set up JOpensim.</li>
+	follow the instructions to set up Joomla.</li>
+	<li>??</li>
 </ol>
 
 
