--- a/OutworldzFiles/Apache/htdocs/JOpensim/default.htm
+++ b/OutworldzFiles/Apache/htdocs/JOpensim/default.htm
@@ -2,16 +2,11 @@
 <head></head>
 <body>
 <!--#include virtual="/menu.html" -->
-<p>Follow these steps to install Joomla and JOpensim:</p>
+
 <ol>
-	<li>Download the zip file from <a href="https://www.joomla.org/">https://www.joomla.org/</a>.</li>
-	<li>Extract it to Outworldzfiles\Apache\htdocs\JOpensim folder.</li>
-	<li>Go to Setup-&gt;Settings-&gt;Apache Settings and set the type to &quot;JOpensim&quot;.
-	</li>
-	<li>Click the Apache Icon at top right of the main panel and select Restart.</li>
-	<li>Navigate to &quot;<a href="http://localhost">http://localhost</a>&quot; and 
-	follow the instructions to set up Joomla.</li>
-	<li>??</li>
+	<li>See the Help file for JOpensim for installation Instructions</li>
+	
+	
 </ol>
 
 
