--- a/OutworldzFiles/Help/Joomla Update.htm
+++ b/OutworldzFiles/Help/Joomla Update.htm
@@ -54,6 +54,7 @@ p.MsoTitle, li.MsoTitle, div.MsoTitle
 span.Heading2Char
 	{mso-style-name:"Heading 2 Char";
 	mso-style-link:"Heading 2";
+	font-family:"Times New Roman",serif;
 	text-transform:uppercase;
 	letter-spacing:.75pt;
 	background:#D9E2F3;}
@@ -104,7 +105,7 @@ to update this component as well.</span></span></p>
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2><span style='color:black;background:white'>How to Update:</span></h2>
+<h2><span style='color:black'>How to Update:</span></h2>
 
 </div>
 
@@ -119,13 +120,13 @@ Setup-&gt;Settings-&gt; and then to Joomla/jOpensim.</p>
 <p class=MsoNormal style='margin-left:.5in'>Press the [Update] button to update
 to the latest jOpensim. This will take you to this screen:<br>
 <br>
-<img width=537 height=398 id="Picture 23"
+<img width=530 height=393 id="Picture 23"
 src="Joomla%20Update_files/image001.png"></p>
 
 <p class=MsoNormal style='margin-left:.5in'>&nbsp;</p>
 
-<p class=MsoNormal style='margin-left:.5in'>Click “Or Browse for file” and
-navigate to the Outworldzfiles\jOpensimfiles\ folder.  Select “pkg_jopensim.0.3.2.0.zip”
+<p class=MsoNormal style='margin-left:.5in'>Click the big green “Or Browse for
+file” and navigate to the Outworldzfiles\jOpensimfiles\ folder.  Select “pkg_jopensim.0.3.2.0.zip”
 and click Ok.    This will update you to jOpensim V3.0.2.0.</p>
 
 <p class=MsoNormal style='margin-left:.5in'>&nbsp;</p>
